<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/addTransaction"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/addTransaction"/>

    <item
        android:title=""
        android:id="@+id/action_more_menu"
        android:icon="@drawable/ic_menu_more"
        android:showAsAction="always">
        <menu>
            <group android:checkableBehavior="single" >
                <item
                    android:id="@+id/byDate"
                    android:showAsAction="never"
                    android:title="@string/byDate"/>
                <item
                    android:id="@+id/byValueDate"
                    android:showAsAction="never"
                    android:title="@string/byValueDate"/>
                <item
                    android:id="@+id/byStatement"
                    android:showAsAction="never"
                    android:title="@string/byStatement"/>
            </group>
        </menu>
    </item>

</menu>