<?xml version="1.0" encoding="utf-8"?>
<!-- A view that is able to signal that a data update is available -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp" >

    <LinearLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="10dp"
        android:background="@drawable/back_yapbam_center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/pleaseWait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:indeterminate="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/deletedPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="5dp"
        android:background="@drawable/back_alert" >

        <TextView
            android:id="@+id/deletedMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/file_was_deleted"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:clickable="true"
            android:drawableTop="@drawable/ic_open"
            android:onClick="changeFile"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:text="@string/setFile" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/updatedPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="5dp"
        android:background="@drawable/back_alert" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/dataUpdateAvailable"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:clickable="true"
            android:drawableTop="@drawable/ic_refresh"
            android:onClick="refreshFile"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:text="@string/refresh" />
    </LinearLayout>

    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/back_yapbam_center"
        android:drawableLeft="@drawable/ic_alert"
        android:drawablePadding="5dp"
        android:gravity="center_vertical|center_horizontal"
        android:padding="5dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</FrameLayout>